@@ -128,6 +128,11 @@ END (__memset_chk_erms)
 
 /* Only used to measure performance of REP STOSB.  */
 ENTRY (__memset_erms)
+	/* Skip zero length.  */
+	testq	%rdx, %rdx
+	jnz	 L(stosb)
+	movq	%rdi, %rax
+	ret
 # else
 /* Provide a hidden symbol to debugger.  */
 	.hidden	MEMSET_SYMBOL (__memset, erms)
